# Agentic-Knowledge-Workspace

./: .cursorrules  .gitignore  CONTINUING_WORK.txt  HOME_SETUP.md  INTEGRATIONS_SETUP.md  LOCAL_EMBEDDINGS_SETUP.md  PHASE4_FINAL_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PROJECT_PLAN.md  README.md  SETUP_GUIDE.md  project_structure.txt
backend/: .env.example  DATABASE_SETUP.md  EMBEDDINGS_SETUP.md  ENV_SETUP_INSTRUCTIONS.txt  FREE_EMBEDDINGS.md  GEMINI_SETUP.md  LLM_PROVIDERS.md  MIGRATIONS_QUICKREF.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 20241204_1430_gemini_embeddings.py  20241204_initial_schema.py  20241205_add_document_indexes.py  20241205_local_embeddings.py  20241205_upgrade_embeddings_768.py  20241206_add_tenant_credentials.py  20241207_add_evaluation_runs.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  encryption.py  logging.py  security.py
backend/app/integrations/: email_client.py  jira_client.py
backend/app/models/: __init__.py  document.py  evaluation.py  tenant.py  tenant_credentials.py  user.py
backend/app/services/: __init__.py  agent.py  agent_tools.py  answer_engine.py  credentials.py  evaluation.py  ingestion.py  langsmith.py  (+2 more)
backend/scripts/: __init__.py  init_db.py  seed_data.py  test_answer_engine.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_documents.py  test_eval.py  test_main.py  test_security.py  test_storage.py
(+60 files in other folders)
